[gd_scene load_steps=11 format=3 uid="uid://67xuw5ugkvxj"]

[ext_resource type="Script" uid="uid://dh782475t810g" path="res://enemy.gd" id="1_4gyqm"]
[ext_resource type="Texture2D" uid="uid://dklf2pwagydx" path="res://spritesheet.png" id="2_4gyqm"]

[sub_resource type="Animation" id="Animation_qi2p4"]
resource_name = "Idle"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_3yqyl"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_epg4t"]
resource_name = "attack"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_iifgy"]
resource_name = "walk"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.633333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [2, 3]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wujgv"]
_data = {
&"Idle": SubResource("Animation_qi2p4"),
&"RESET": SubResource("Animation_3yqyl"),
&"attack": SubResource("Animation_epg4t"),
&"walk": SubResource("Animation_iifgy")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_4gyqm"]
height = 42.0

[sub_resource type="CircleShape2D" id="CircleShape2D_4gyqm"]

[sub_resource type="CircleShape2D" id="CircleShape2D_qi2p4"]

[node name="enemy" type="CharacterBody2D" groups=["enemies"]]
position = Vector2(-1, 1)
scale = Vector2(0.923046, 1.00784)
script = ExtResource("1_4gyqm")

[node name="AttackCooldown" type="Timer" parent="."]
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="AttackCooldown"]
libraries = {
&"": SubResource("AnimationLibrary_wujgv")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(57.4186, -27.7822)
scale = Vector2(1.41174, 1.17415)
shape = SubResource("CapsuleShape2D_4gyqm")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(63.9188, -27.7822)
scale = Vector2(0.77, 0.82)
texture = ExtResource("2_4gyqm")
hframes = 4

[node name="DetectionRange" type="Area2D" parent="Sprite2D"]
position = Vector2(-3.8961, 2.43902)
scale = Vector2(1.63561, 0.509798)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite2D/DetectionRange"]
position = Vector2(0.661629, -4.78426)
scale = Vector2(9.58126, 20.9684)
shape = SubResource("CircleShape2D_4gyqm")

[node name="AttackRange" type="Area2D" parent="Sprite2D/DetectionRange"]
position = Vector2(-7.94051, 16.5776)
scale = Vector2(0.670714, 1.53622)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite2D/DetectionRange/AttackRange"]
position = Vector2(14.6845, -15.5942)
scale = Vector2(4.20843, 6.50893)
shape = SubResource("CircleShape2D_qi2p4")

[connection signal="timeout" from="AttackCooldown" to="." method="_on_attack_cooldown_timeout"]
[connection signal="body_entered" from="Sprite2D/DetectionRange" to="." method="_on_detection_range_body_entered"]
